# laser_turbo_simulator

./: CMakeLists.txt  README.md  config.cfg  parameters.cfg  parameters.py
include/: simulator.h
plot/: Gaussian.py  Gaussian2.py  plot.py  plot_distribution.py  plot_offset_violin.py  plot_speed.py  plotviolin.py  tryviolin.py
script/: pid.sh  pid_result.txt  speed_wbeam.sh  speed_wobeam.sh
src/: run.cpp  simulator.cpp
test_fit/: CMakeLists.txt  pd.txt
test_fit/src/: fit.cpp
